--- a/reddit-save-manager-ingest/pom.xml
+++ b/reddit-save-manager-ingest/pom.xml
@@ -38,6 +38,13 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- MongoDB Client Driver -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
