Updated pom.xml files

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
   <version>0.1</version>
   <packaging>pom</packaging>
   <name>reddit-save-manager</name>
+
+  <organization>
+		<name>Mark Webb</name>
+		<url>https://github.com/elihusmails/reddit-save-manager</url>
+	</organization>
+	<scm>
+		<url>https://github.com/elihusmails/reddit-save-manager</url>
+		<developerConnection>Mark Webb</developerConnection>
+	</scm>
+	<issueManagement>
+		<url>https://github.com/elihusmails/reddit-save-manager/issues</url>
+		<system>github</system>
+	</issueManagement>
+
   <modules>
     <module>reddit-save-manager-ingest</module>
     <module>reddit-save-manager-rest</module>
