--- a/reddit-save-manager-ingest/pom.xml
+++ b/reddit-save-manager-ingest/pom.xml
@@ -45,6 +45,13 @@
 			<version>3.4.2</version>
 		</dependency>
 
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -78,7 +85,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>com.markwebb.reddit.save.manager.ingest.MainTester</Main-Class>
+										<Main-Class>com.markwebb.reddit.save.manager.ingest.DontCheckIn</Main-Class>
 									</manifestEntries>
 								</transformer>
 							</transformers>
