--- a/reddit-save-manager-ingest/pom.xml
+++ b/reddit-save-manager-ingest/pom.xml
@@ -85,7 +85,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>com.markwebb.reddit.save.manager.ingest.DontCheckIn</Main-Class>
+										<Main-Class>com.markwebb.reddit.save.manager.ingest.MainTester</Main-Class>
 									</manifestEntries>
 								</transformer>
 							</transformers>
